@@ -50,6 +50,7 @@ public final class EachLineIterator implements Iterator<String> {
     } catch (IOException ex) {
       Logger.getLogger(EachLineIterator.class.getName()).log(Level.SEVERE,
           null, ex);
+      throw new RuntimeException(ex);
     }
     nextLine();
   }
@@ -60,6 +61,7 @@ public final class EachLineIterator implements Iterator<String> {
     } catch (IOException ex) {
       Logger.getLogger(EachLineIterator.class.getName()).log(Level.SEVERE,
           null, ex);
+      throw new RuntimeException(ex);
     }
   }
 
