@@ -61,3 +61,5 @@ Version 1.3.0
 * Made RubyEnumerable an abstract class
 
 * Changed constructors of RubyArray & RubyHash to public
+
+- Removed foreach() from RubyIO due to the stream closing issue
